<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/colorHomeBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:id="@+id/constraint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorNormal_spe">

        <ImageView
                android:id="@+id/closeBtn"
                android:src="@drawable/ic_backbtn"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="@dimen/backbtnsize"
                android:layout_height="@dimen/backbtnsize"
                android:contentDescription="TODO" />

        <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@color/colorBlack"
                android:textSize="22dp"
                android:text="@string/add_a_product"/>

    </android.support.constraint.ConstraintLayout>

    <ScrollView
            app:layout_constraintTop_toBottomOf="@id/constraint"
            app:layout_constraintBottom_toBottomOf="parent"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="0dp">

        <LinearLayout
                android:orientation="vertical"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_camera"
                        android:layout_marginEnd="@dimen/marginbetween_addproduct"
                        android:contentDescription="TODO" />

                <LinearLayout
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <EditText
                            android:id="@+id/refET"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/ProductEditText"
                            android:inputType="text"
                            android:hint="@string/ref"
                            android:imeOptions="actionNext"
                            android:autofillHints="" />

                    <EditText
                            android:layout_weight="1"
                            android:id="@+id/priceET"
                            android:layout_marginTop="@dimen/margin_bettweenll_addproduct"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/ProductEditText"
                            android:inputType="number"
                            android:hint="@string/price"
                            android:imeOptions="actionNext"
                            android:autofillHints="" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/margin_bettweenll_addproduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_marginEnd="@dimen/marginbetween_addproduct"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jewelry_type"
                        style="@style/ProductTextView"/>

                <Spinner
                        android:id="@+id/jewelryTypeSpin"
                        style="@style/ProductSpinner"
                        android:entries="@array/jewelry_arrays"
                        android:prompt="@string/jewelry_prompt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <FrameLayout
                    android:id="@+id/containerFL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
            </FrameLayout>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    style="@style/DefaultButton"
                    android:text="@string/submitbtntext"
                    android:id="@+id/btnSubmit"/>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>