<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth.PhoneNumberVerifyActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phonenumberverification"
            android:textAppearance="@style/AuthTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/guidelineSignIn"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineSignIn"
            app:layout_constraintGuide_percent=".3"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline2"
            app:layout_constraintGuide_percent=".35"/>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/guideline2"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">
        <EditText
                android:id="@+id/verifyCodeET"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AuthEditText"
                android:inputType="number"
                android:hint="@string/verifyCodeTemp"
                android:layout_marginBottom="20dp"/>

    </android.support.constraint.ConstraintLayout>

    <TextView
            android:id="@+id/resendVerifyCode"
            app:layout_constraintTop_toBottomOf="@+id/constraintLay"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorResend"
            android:text="Resend"
            android:textSize="20sp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineSignInBtn"
            app:layout_constraintGuide_percent=".7"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/guidelineSignInBtn"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="30dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="30dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            style="@style/DefaultButton"
            android:text="@string/confirm"
            android:id="@+id/btn_confirm"/>



</android.support.constraint.ConstraintLayout>