<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth.LoginActivity">

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineLogo"
            app:layout_constraintGuide_percent=".31"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textAppearance="@style/AuthTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guidelineSignIn"/>

    <ImageView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/guidelineLogo"
            android:src="@drawable/ic_logo"
            android:layout_width="@dimen/logosize"
            android:layout_height="@dimen/logosize"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineSignIn"
            app:layout_constraintGuide_percent=".15"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline2"
            app:layout_constraintGuide_percent=".35"/>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/guideline2"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">
        <EditText
                android:id="@+id/emailET"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AuthEditText"
                android:inputType="text"
                android:hint="@string/emailorphone"
                android:layout_marginBottom="20dp"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelinePassword"
            app:layout_constraintGuide_percent=".45"/>

    <EditText
            app:layout_constraintTop_toBottomOf="@+id/guidelinePassword"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            style="@style/AuthEditText"
            android:id="@+id/passwordET"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineSignInBtn"
            app:layout_constraintGuide_percent=".55"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/guidelineSignInBtn"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="30dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="30dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            style="@style/DefaultButton"
            android:text="@string/sign_in"
            android:id="@+id/btn_signin"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineOr"
            app:layout_constraintGuide_percent=".67"/>

    <android.support.constraint.ConstraintLayout
            app:layout_constraintTop_toBottomOf="@id/guidelineOr"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <RelativeLayout
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/or"
                    android:text="OR"
                    style="@style/TextButton"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_width="160dp"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/or"
                    android:layout_marginLeft="10dp"
                    android:background="#DC873B"/>
            <TextView
                    android:layout_width="160dp"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/or"
                    android:layout_marginRight="10dp"
                    android:background="#DC873B"/>

        </RelativeLayout>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineSignInTouchIDBtn"
            app:layout_constraintGuide_percent=".73"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/guidelineSignInTouchIDBtn"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="30dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="30dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            style="@style/DefaultButton"
            android:text="@string/sign_in_with_touchID"
            android:id="@+id/btn_signin_touchID"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineSocial"
            app:layout_constraintGuide_percent=".827"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/guidelineSocial"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="horizontal">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                style="@style/TextButton"
                android:text="@string/create_new_account"/>
        <TextView
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SkyTextButton"
                android:text="@string/sign_up"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>