<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth.RegisterActivity">

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineLogo"
            app:layout_constraintGuide_percent=".31"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textAppearance="@style/AuthTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guidelineSignIn"/>

    <ImageView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/guidelineLogo"
            android:src="@drawable/ic_logo"
            android:layout_width="@dimen/logosize"
            android:layout_height="@dimen/logosize"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineSignIn"
            app:layout_constraintGuide_percent=".15"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline2"
            app:layout_constraintGuide_percent=".35"/>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/guideline2"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

        <EditText
                android:id="@+id/emailETR"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AuthEditText"
                android:inputType="text"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:layout_marginBottom="20dp"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelinePhone"
            app:layout_constraintGuide_percent=".45"/>

    <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/guidelinePhone"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="30dp"
            android:id="@+id/phoneLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/AuthEditText">
        <com.rilixtech.CountryCodePicker
                android:id="@+id/ccp"
                app:ccp_textSize="14sp"
                app:ccp_textColor="@color/colorNormal"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <LinearLayout
                android:background="#7100C3"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_width="1dp"
                android:layout_height="30dp"/>

        <EditText
                android:layout_marginLeft="10dp"
                android:id="@+id/phoneETR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#00000000"
                android:lines="1"
                android:textSize="18sp"
                android:inputType="phone"
                android:textColor="@color/colorNormal"
                android:textColorHint="@android:color/darker_gray"
                android:textCursorDrawable="@drawable/edit_cursor"
                android:hint="Phone number"/>

    </LinearLayout>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelinePassword"
            app:layout_constraintGuide_percent=".55"/>

    <EditText
            app:layout_constraintTop_toBottomOf="@+id/guidelinePassword"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            style="@style/AuthEditText"
            android:id="@+id/passwordETR"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelinePasswordConfirm"
            app:layout_constraintGuide_percent=".65"/>

    <EditText
            app:layout_constraintTop_toBottomOf="@id/guidelinePasswordConfirm"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="30dp"
            android:id="@+id/confirmPasswordETR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            style="@style/AuthEditText"
            android:textCursorDrawable="@drawable/edit_cursor"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:layout_marginBottom="20dp"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineSignInBtn"
            app:layout_constraintGuide_percent=".75"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/guidelineSignInBtn"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="30dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="30dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            style="@style/DefaultButton"
            android:text="@string/sign_up"
            android:id="@+id/btn_signup"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineSocial"
            app:layout_constraintGuide_percent=".85"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/guidelineSocial"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="horizontal">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                style="@style/TextButton"
                android:text="@string/alreadyaccount"/>
        <TextView
                android:id="@+id/btn_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SkyTextButton"
                android:text="@string/sign_in"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>